--- a/templates/admin/change_list_results.html
+++ b/templates/admin/change_list_results.html
@@ -13,9 +13,9 @@
 <th scope="col" {{ header.class_attrib }}>
    {% if header.sortable %}
      {% if header.sort_priority > 0 %}
-       <div class="sortoptions">
-         <a class="sortremove" href="{{ header.url_remove }}" title="{% trans "Remove from sorting" %}"></a>
-         {% if num_sorted_fields > 1 %}<span class="sortpriority" title="{% blocktrans with priority_number=header.sort_priority %}Sorting priority: {{ priority_number }}{% endblocktrans %}">{{ header.sort_priority }}</span>{% endif %}
+       <div class="sortoptions pull-right">
+
+         {% if num_sorted_fields > 1 %}<a class="sortremove" href="{{ header.url_remove }}" title="{% trans "Remove from sorting" %}"><i class='icon-remove'></i></a><span class="sortpriority" title="{% blocktrans with priority_number=header.sort_priority %}Sorting priority: {{ priority_number }}{% endblocktrans %}">{{ header.sort_priority }}</span>{% endif %}
          <a href="{{ header.url_toggle }}" class="toggle {% if header.ascending %}ascending{% else %}descending{% endif %}" title="{% trans "Toggle sorting" %}"></a>
        </div>
      {% endif %}
