alterado alinhamento do deleta?

--- a/static/admin/css/custom_admin.css
+++ b/static/admin/css/custom_admin.css
@@ -7,11 +7,11 @@
     text-align: justify;
 }
 
-td.text-aling-center , th.text-aling-center{
+td.text-align-center , th.text-align-center{
     text-align: center;
 }
 
-.text-aling-center{
+.text-align-center{
     text-align: center;
 }
 
